--- a/html/jslicense.html
+++ b/html/jslicense.html
@@ -25,8 +25,7 @@
 	<nav class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/#/">Packages</a></li>
-            <li><a href="/#/getting-started">Getting started</a></li>
-            <li><a href="https://github.com/melpa/melpa">GitHub</a></li>
+            <li><a href="https://github.com/CyberShadow/melpa">GitHub</a></li>
           </ul>
 	</nav>
       </div>
